--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,10 +1,26 @@
 <h1>Create a Song</h1>
 
 <%= form_for @song  do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <br />
+  <%= f.label :title, "Song Title" %>
+  <%= f.text_field :title %><br>
+   
+  <%= f.label :artist_name, "Artist Name"%>
+  <%= f.text_field :artist_name %><br>
+  
+  <%= f.label "Select Genre" %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name%>
 
+  <h2>Song Notes</h2>
+
+
+  <%= f.fields_for :notes do |note_form| %>
+    <%= note_form.label :note %>
+    <%= note_form.text_area :content, rows: 5, cols: 50 %> <br>
+    <%end%>
+
+  
+  
+  
   <%= f.submit %>
 <% end %>
 
