--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,10 @@
-<h1>Songs#show</h1>
 
-Title: <%= @song.title %>
+<h2>Title: <%= @song.title %><br>
+Artist: <%= @song.artist.name%><br>
+Genre: <%= @song.genre.name %><br>
+<ul>
+Notes <% @song.notes.each do |note| %>
+<li><%= note.content%></li>
+<%end%>
+<ul>
+
